--- a/index.html
+++ b/index.html
@@ -120,12 +120,24 @@ var newDivsEnd = '.png" width="100" height="100">\
     
 }
 
-.div10{
-    background: ;
-    width:100%;
-    height:100%;
-    text-align:center;
+.pokedexHead {
+    border: 2px solid #945BE9;
+    background-color: #FFC628;
+    margin:10px 500px 10px 500px;   
+    padding: 3px 10px 3px 10px;
+    text-align: center;
+    font-size: 20px; 
+    border-radius: 12px;
+    box-shadow: 2px 2px 2px #888888;
 }
+
+.pokemonImage {
+    margin:10px 450px 10px 450px;   
+    padding: 3px 10px 3px 10px;
+    text-align: center;
+    
+}
+
 .div100{    
     width: 50%;
     min-height: 150px;
@@ -162,13 +174,17 @@ var newDivsEnd = '.png" width="100" height="100">\
 
 </head>
 <body>
-<div class="div10">
+<div class="pokedexHead">Pokedex</div>
+<div class="pokemonImage"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/English_Pok%C3%A9mon_logo.svg/2000px-English_Pok%C3%A9mon_logo.svg.png" alt="изображение" width="250" height="100"></div>  
+<div>
+
+<!-- <div class="div10">
 <div id="Pokedex">
    <h1><font size="5px" face="Arial" color="red";>Pokedex</font></h1> 
    <div align="center" style="width:auto; height:auto; position:relative; float:none;">
    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/English_Pok%C3%A9mon_logo.svg/2000px-English_Pok%C3%A9mon_logo.svg.png" alt="изображение" width="250" height="100">
    </div>
-</div>
+</div> -->
 
 
 </div>
