--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ $.get( "http://pokeapi.co/api/v2/pokemon/"+id, function( data ) {
   var profileTable = table + statisticRow('Type', currentInfo.types[0]) + statisticRow('Attack', currentInfo.attack) + statisticRow('Defense', currentInfo.defense) + statisticRow('HP', currentInfo.hp) + statisticRow('SP Attack', currentInfo['special-attack']) + statisticRow('SP Defense', currentInfo['special-defense']) + statisticRow('Speed', currentInfo.speed) + statisticRow('Weight', currentInfo.weight) + statisticRow('Total moves', currentInfo.totalMoves) + tableEnd
 
   
-  $( "#rectangle"+data.id+" .hidden-info" ).html( profileImage+data.name+"#"+data.id+profileTable );
+  $( "#rectangle"+data.id+" .hidden-info" ).html( profileImage+data.name+" "+"#"+data.id+profileTable );
   $(".pokemon").click(renderProfile)
 });
 }
@@ -72,18 +72,14 @@ var newDivsEnd = '.png" width="100" height="100">\
 </div>\
 '
   function displ(loadMore) {
-    // if (document.getElementById(loadMore).style.display == 'none') {
-    //   document.getElementById(loadMore).style.display = 'block'
-    // } else {
-    //   document.getElementById(loadMore).style.display = 'none'
-    // }
+    
     var visiblePokemonsCount = $('.rectangle').length;
-    $('#rectangle'+ visiblePokemonsCount).before('<br/>');
-    for(var i = visiblePokemonsCount; i < (visiblePokemonsCount + 3); i++) {
+      for(var i = visiblePokemonsCount; i < (visiblePokemonsCount + 3); i++) {
       $('#rectangle'+ i).after(newDivsStart + (i+1) + newDivsImage + (i+1) + newDivsEnd)
       renderPokemonFromAPI(i+1)
     }
     $('#rectangle'+ i).after('<br/>')
+    $('#rectangle'+ visiblePokemonsCount).after('<br/>');
   }
 
 </script>
@@ -97,17 +93,16 @@ var newDivsEnd = '.png" width="100" height="100">\
     background-color:#FFDB0F;
 }
 
- .rectangle
-  {
-  padding: 30px;
-  border: 2px solid #945BE9;
-  display: inline-block;
-  margin: 10px;
-  height:150px;
-  width: 100px;
-  border-radius: 12px;
-  background-color:#FFC628;
-  box-shadow: 2px 2px 2px #888888;
+ .rectangle {
+    padding: 30px;
+    border: 2px solid #945BE9;
+    display: inline-block;
+    margin: 10px;
+    height:150px;
+    width: 100px;
+    border-radius: 12px;
+    background-color:#FFC628;
+    box-shadow: 2px 2px 2px #888888;
 }
 
 #rectangle-profile {
@@ -133,12 +128,6 @@ var newDivsEnd = '.png" width="100" height="100">\
     border-radius: 12px;
 }
 
-.pokemonImage {
-    margin:10px 450px 10px 450px;   
-    padding: 3px 10px 3px 10px;
-    text-align: center;  
-}
-
 .div100{    
     width: 50%;
     min-height: 150px;
@@ -151,6 +140,20 @@ var newDivsEnd = '.png" width="100" height="100">\
     min-height: 150px;
     background: ;
     float: left;
+    color: blue;
+    text-align: center;
+    text-transform: capitalize;
+}
+
+.name{    
+    text-transform: capitalize;
+}
+
+.pokemnDisplay{    
+    text-align: center;
+    font-size: 20px;
+     
+    color: blue; 
 }
 
 #imageRectangle19{    
@@ -160,16 +163,16 @@ var newDivsEnd = '.png" width="100" height="100">\
 
 
  #LoadMore{
-  padding: 20px;
-  border: 1px solid #945BE9;
-  text-align: center;
-  margin: 10px 30px 10px 145px; 
-  padding: 10px 20px 10px 20px;  
-  height: 20px;
-  width: 220px;
-  border-radius: 12px;
-  background-color:#FFC628;
-  box-shadow: 2px 2px 2px #888888;
+    padding: 20px;
+    border: 1px solid #945BE9;
+    text-align: center;
+    margin: 10px 30px 10px 145px; 
+    padding: 10px 20px 10px 20px;  
+    height: 20px;
+    width: 220px;
+    border-radius: 12px;
+    background-color:#FFC628;
+    box-shadow: 2px 2px 2px #888888;
  }
 
 .button1 {
