--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <title>Pokemon</title>
 
-<script type="text/javascript">
+ <script type="text/javascript">
 
 
 var displayedType = '';
@@ -112,8 +112,8 @@ function displ(loadMore) {
     border: 2px solid #945BE9;
     display: inline-block;
     margin: 10px;
-    height:150px;
-    width: 105px;
+    height:160px;
+    width: 110px;
     border-radius: 12px;
     background-color:#FFC628;
     box-shadow: 2px 2px 2px #888888;
@@ -203,8 +203,6 @@ function displ(loadMore) {
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
-    /*width:45px; 
-    height:20px;*/
    margin: 4px 2px;
    cursor: pointer;
 }
@@ -217,8 +215,6 @@ function displ(loadMore) {
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
-    /*width:45px; 
-    height:20px;*/
    margin: 4px 2px;
    cursor: pointer;
 }
@@ -231,8 +227,6 @@ function displ(loadMore) {
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
-    /*width:45px; 
-    height:20px;*/
    margin: 4px 2px;
    cursor: pointer;
 }
@@ -245,8 +239,6 @@ function displ(loadMore) {
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
-    /*width:45px; 
-    height:20px;*/
    margin: 4px 2px;
    cursor: pointer;
 }
@@ -259,8 +251,6 @@ function displ(loadMore) {
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
-    /*width:45px; 
-    height:20px;*/
    margin: 4px 2px;
    cursor: pointer;
 }
@@ -273,8 +263,6 @@ function displ(loadMore) {
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
-    /*width:45px; 
-    height:20px;*/
    margin: 4px 2px;
    cursor: pointer;
 }
@@ -287,8 +275,6 @@ function displ(loadMore) {
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
-    /*width:45px; 
-    height:20px;*/
    margin: 4px 2px;
    cursor: pointer;
 }
@@ -301,8 +287,6 @@ function displ(loadMore) {
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
-    /*width:45px; 
-    height:20px;*/
    margin: 4px 2px;
    cursor: pointer;
 }
@@ -315,8 +299,121 @@ function displ(loadMore) {
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
-    /*width:45px; 
-    height:20px;*/
+   margin: 4px 2px;
+   cursor: pointer;
+}
+  
+.ground{
+   background-color: #C03028;
+   border: none;
+   color: black;
+   padding: 5px 5px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 14px;
+   margin: 4px 2px;
+   cursor: pointer;
+ }
+  .fairy{
+   background-color: #C03028;
+   border: none;
+   color: black;
+   padding: 5px 5px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 14px;
+   margin: 4px 2px;
+   cursor: pointer;
+ }
+.rock{
+   background-color: #FFFF00;
+   border: none;
+   color: black;
+   padding: 5px 5px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 14px;
+   margin: 4px 2px;
+   cursor: pointer;
+}
+
+.ghost{
+   background-color: #9900FF;
+   border: none;
+   color: black;
+   padding: 5px 5px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 14px;
+   margin: 4px 2px;
+   cursor: pointer;
+}
+
+.steel{
+   background-color: #33FF00;
+   border: none;
+   color: black;
+   padding: 5px 5px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 14px;
+   margin: 4px 2px;
+   cursor: pointer;
+}
+
+.psychic{
+   background-color: #FF3300;
+   border: none;
+   color: black;
+   padding: 5px 5px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 14px;
+   margin: 4px 2px;
+   cursor: pointer;
+}
+
+.ice{
+   background-color: #CC9900;
+   border: none;
+   color: black;
+   padding: 5px 5px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 14px;
+   margin: 4px 2px;
+   cursor: pointer;
+}
+
+.dragon{
+   background-color: #CC9900;
+   border: none;
+   color: black;
+   padding: 5px 5px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 14px;
+   margin: 4px 2px;
+   cursor: pointer;
+}
+
+.dark{
+   background-color: #003399;
+   border: none;
+   color: black;
+   padding: 5px 5px;
+   text-align: center;
+   text-decoration: none;
+   display: inline-block;
+   font-size: 14px;
    margin: 4px 2px;
    cursor: pointer;
 }
